# Web-Algebra

./: .gitignore  CLAUDE.md  README.md  api-key-sample.txt  example.json  examples.md  formal-semantics.md  ldh_operations.txt  output.json  pyproject.toml  requirements.txt  shell.nix  test_all.py  test_jsonld_direct.py  test_jsonld_processing.py
.github/workflows/: ci.yml  release.yml
examples/: ancient-philosophers-fixed.json  ancient-philosophers.json  classical-composers.json  complex-jsonld-nesting.json  dbpedia-wikidata.json  denmark-cities.json  european-monarchs.json  extract-classes.json  extract-ontology-simple.json  extract-ontology.json  extract-properties.json  fastest-growing-cities.json  film-directors.json  generate-northwind-portal.json  generate-portal.json  jsonld-nested-operations.json  jsonld-with-foreach-data.json  linkeddatahub-put-test.json  nobel-physics-laureates.json  scientific-discoveries.json  substitute-test.json  sweden-cities.json  test-complex-operation.json  test-jsonld-simple.json  test-patch-simple.json  test-post-simple.json  test-potential-mismatch.json  test-put-simple.json  test-simple-operation.json  test-simple-recursive.json  test-sparql-operation.json  uniprot-rhea.json  united-kingdom-cities.json
prompts/: system.md  user.template.txt
src/: cli.py  client.py  main.py  operation.py  orchestrator.py  registry.py
src/operations/: construct.py  encode_for_uri.py  for_each.py  format_string.py  get.py  merge.py  post.py  put.py  replace.py  resolve_uri.py  select.py  sparql_string.py  str.py  substitute.py  value_of.py  var.py
src/prompts/: system.md
src/web_algebra/: __init__.py  __main__.py  client.py  json_result.py  main.py  mcp_tool.py  operation.py  server.py
src/web_algebra/operations/: bindings.py  construct.py  current.py  encode_for_uri.py  execute.py  extract_classes.py  extract_datatype_properties.py  extract_object_properties.py  filter.py  for_each.py  get.py  merge.py  now.py  post.py  put.py  replace.py  str.py  (+9 more)
test/operations/: test_resolve_uri.py
tests/: SPEC_GAPS.md  composition-chain-get-construct-merge.json  composition-extreme-nesting.json  composition-filter-select-results.json  composition-http-operations-chain.json  composition-mixed-jsonld-operations.json  composition-nested-operations-deep.json  composition-select-foreach-str.json  composition-sparql-operations-chain.json  conftest.py  error-case-graph-to-string.json  error-case-type-mismatch-uri-to-string.json  ldh-composition-create-container-add-select.json  ldh-composition-create-item-add-blocks.json  simple-composition-working.json  test_web_algebra.py  variable-scope-foreach-context.json  variable-scope-foreach-nested.json
tests/integration/: test_negative_fixtures.py  test_positive_fixtures.py
tests/positive/: composition-nested-operations-deep.json  ldh-composition-create-container-add-select.json  simple-composition-working.json
tests/unit/: test_bindings.py  test_construct.py  test_current.py  test_describe.py  test_encode_for_uri.py  test_execute.py  test_extract_classes.py  test_extract_datatype_properties.py  test_extract_object_properties.py  test_extract_ontology.py  test_filter.py  test_for_each.py  test_get.py  test_ldh_add_file.py  test_ldh_add_generic_service.py  test_ldh_add_object_block.py  test_ldh_add_result_set_chart.py  test_ldh_add_select.py  test_ldh_add_view.py  test_ldh_add_xhtml_block.py  test_ldh_create_container.py  test_ldh_create_item.py  test_ldh_generate_class_containers.py  test_ldh_generate_ontology_views.py  test_ldh_generate_portal.py  test_ldh_list.py  test_ldh_remove_block.py  test_merge.py  test_patch.py  test_post.py  test_process_json_jsonld.py  test_put.py  test_replace.py  test_resolve_uri.py  test_retry_after_handler.py  test_select.py  test_sparql_string.py  test_str.py  test_struuid.py  test_substitute.py  (+5 more)
(+45 files in other folders)
