[project]
name = "WebAlgebra"
version = "0.1.0"
description = "Composable RDF operations in JSON"
authors = [
  { name = "Martynas Jusevicius", email = "martynas@atomgraph.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rdflib==7.0.0",
    "openai",
    "mcp[cli]==1.10.1",
    "pydantic-settings",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["web_algebra*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
webalgebra = { workspace = true }

[dependency-groups]
dev = [
    "webalgebra",
]
