[project]
name = "web-algebra"
version = "1.2.0"
description = "Composable RDF operations in JSON"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Martynas Jusevicius", email = "martynas@atomgraph.com" }
]
requires-python = ">=3.10"
keywords = ["rdf", "sparql", "linked-data", "mcp", "json-dsl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "rdflib==7.0.0",
    "openai",
    "mcp[cli]==1.10.1",
    "pydantic-settings",
    "urllib3",
]

[project.urls]
Homepage = "https://github.com/AtomGraph/Web-Algebra"
Repository = "https://github.com/AtomGraph/Web-Algebra"
Issues = "https://github.com/AtomGraph/Web-Algebra/issues"

[project.scripts]
web-algebra = "web_algebra.main:cli"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["web_algebra*"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers -m 'not network and not sparql and not ldh'"
markers = [
    "unit: pure unit tests (auto-applied to tests/unit/)",
    "integration: JSON-fixture composition tests (auto-applied to tests/integration/)",
    "network: requires live HTTP endpoint",
    "sparql: requires live SPARQL endpoint",
    "ldh: requires LinkedDataHub instance + CERT_PEM_PATH/CERT_PASSWORD",
]
